objects/Visits__c/Visits__c.object-meta.xml
<CustomObject>
    <description>This object contains information relating to the timing of Services for each Customer site, by Engineer.</description>
    <label>Visit</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Service Call</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>