objects/Visits__c/fields/Aborted_Visit__c.field-meta.xml
<CustomField>
    <fullName>Aborted_Visit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aborted Visit</label>
    <type>Checkbox</type>
</CustomField>