objects/Visits__c/fields/Accepted_details__c.field-meta.xml
<CustomField>
    <fullName>Accepted_details__c</fullName>
    <label>Accepted details</label>
    <length>100</length>
    <type>Text</type>
</CustomField>