objects/Visits__c/fields/Actual_Cost__c.field-meta.xml
<CustomField>
    <fullName>Actual_Cost__c</fullName>
    <inlineHelpText>Auto calculates providing the Order Value, Parts Cost and Labour Costs fields are filled in.</inlineHelpText>
    <label>Actual Total Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>