objects/Visits__c/fields/Actual_GP_Margin__c.field-meta.xml
<CustomField>
    <fullName>Actual_GP_Margin__c</fullName>
    <inlineHelpText>Auto calculates providing the Order Value and Cost fields are filled in.</inlineHelpText>
    <label>Actual GP Margin</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>