objects/Visits__c/fields/Actual_GP_Margin_Last_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_GP_Margin_Last_Change_Date__c</fullName>
    <description>This Value Should get Auto Populate with Today&apos;s date of when the Actual GP Margin changed.</description>
    <inlineHelpText>This Value will get Auto Populate with Today&apos;s date of when the Actual GP Margin changed.</inlineHelpText>
    <label>Actual GP Margin Last Change Date</label>
    <type>Date</type>
</CustomField>