objects/Visits__c/fields/Actual_Service_Date_2__c.field-meta.xml
<CustomField>
    <fullName>Actual_Service_Date_2__c</fullName>
    <label>Actual Visit Date - 2</label>
    <type>Date</type>
</CustomField>