objects/Visits__c/fields/Actual_Service_Date_3__c.field-meta.xml
<CustomField>
    <fullName>Actual_Service_Date_3__c</fullName>
    <label>Actual Visit Date - 3</label>
    <type>Date</type>
</CustomField>