objects/Visits__c/fields/Actual_Service_Date_4__c.field-meta.xml
<CustomField>
    <fullName>Actual_Service_Date_4__c</fullName>
    <label>Actual Visit Date - 4</label>
    <type>Date</type>
</CustomField>