objects/Visits__c/fields/Actual_Service_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Service_Date__c</fullName>
    <inlineHelpText>If this date differs from the Planned Service Date, this is because the Planned Service date is not a working day.</inlineHelpText>
    <label>On Site Date</label>
    <type>Date</type>
</CustomField>