objects/Visits__c/fields/Actual_Visit_date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Visit_date__c</fullName>
    <formula>TEXT(DAY(Actual_Service_Date__c))+&quot;/&quot;+TEXT(MONTH(Actual_Service_Date__c))+&quot;/&quot;+TEXT(YEAR(Actual_Service_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Visit date</label>
    <type>Text</type>
</CustomField>