objects/Visits__c/fields/Alarm_Master_History__c.field-meta.xml
<CustomField>
    <fullName>Alarm_Master_History__c</fullName>
    <inlineHelpText>In this field I am placing all the text from Alarm Master in case of questions.</inlineHelpText>
    <label>Alarm Master History</label>
    <length>199</length>
    <type>Text</type>
</CustomField>