objects/Visits__c/fields/Amount_2__c.field-meta.xml
<CustomField>
    <fullName>Amount_2__c</fullName>
    <label>Amount - 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>