objects/Visits__c/fields/Amount_4__c.field-meta.xml
<CustomField>
    <fullName>Amount_4__c</fullName>
    <label>Amount - 4</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>