objects/Visits__c/fields/Amount_Totals__c.field-meta.xml
<CustomField>
    <fullName>Amount_Totals__c</fullName>
    <description>Auto populates the sum of Amount-1 to Amount-5</description>
    <formula>(Amount_1__c+Amount_2__c+Amount_3__c+Amount_4__c+Amount_5__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Sum of Amt-1 to Amt--5</inlineHelpText>
    <label>Amount Totals</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>