objects/Visits__c/fields/Annual_Mechanical_Service__c.field-meta.xml
<CustomField>
    <fullName>Annual_Mechanical_Service__c</fullName>
    <formula>IF(AND(TEXT(Visit_Type__c)  = &quot;Service&quot;,TEXT( Service_Type__c ) = &quot;Annual Mechanical Service &amp; Certificate to Pan Oral X-ray&quot; ), 
HYPERLINK (&quot;a0A/e?CF00N580000064xWJ=&quot;&amp; Name&amp;&quot;&amp;CF00N580000064xWJ_lkid=&quot;&amp;Id&amp;&quot;&amp;retURL=%2F&quot;&amp;Id&amp;&quot;&amp;RecordType=0124E0000002wIGQAY&amp;ent=01I58000000NqwK&amp;CF00N580000064xWH=&quot;&amp; Site__r.Name &amp;&quot;&amp;CF00N580000064xWH_lkid=&quot;&amp;Site__r.Id&amp;&quot;&amp;CF00N580000064xeI=&quot;&amp;Engineer2__r.Name&amp;&quot;&amp;CF00N28000001aGZp_lkid=&quot;&amp;Engineer2__r.Id&amp;&quot;&amp;00N580000064xeD=&quot;&amp; Site__r.Visit_Confirmation_Email_to__c&amp;&quot;&amp;CF00N580000064xiC=&quot;&amp;Site_Contract__r.Name&amp;&quot;&amp;CF00N580000064xiC_lkid=&quot;&amp; Site_Contract__r.Id&amp;   &quot;&amp;00N4E000000rqWV=&quot;&amp; Model__c&amp; 
 &quot;&amp;00N4E000000rqWQ=&quot;&amp; Make__c&amp;   &quot;&amp;00N4E000000rqWk=&quot;&amp; Serial_Number__c,IMAGE(&quot;/servlet/servlet.FileDownload?file=0154E000000JNG9&quot;, &quot;Service&quot;)), IF(AND(TEXT(Visit_Type__c)  = &quot;Installation&quot;,TEXT( Service_Type__c ) = &quot;OPG&quot; ), 
HYPERLINK (&quot;a0A/e?CF00N580000064xWJ=&quot;&amp; Name&amp;&quot;&amp;CF00N580000064xWJ_lkid=&quot;&amp;Id&amp;&quot;&amp;retURL=%2Fa0A%2Fo&amp;RecordType=0127Z000001EiZJ&amp;ent=01I58000000NqwK&amp;CF00N580000064xWH=&quot;&amp; Site__r.Name &amp;&quot;&amp;CF00N580000064xWH_lkid=&quot;&amp;Site__r.Id&amp;&quot;&amp;CF00N580000064xeI=&quot;&amp;Engineer2__r.Name&amp;&quot;&amp;CF00N28000001aGZp_lkid=&quot;&amp;Engineer2__r.Id&amp;&quot;&amp;00N580000064xeD=&quot;&amp; Site__r.Visit_Confirmation_Email_to__c&amp;&quot;&amp;CF00N580000064xiC=&quot;&amp;Site_Contract__r.Name&amp;&quot;&amp;CF00N580000064xiC_lkid=&quot;&amp; Site_Contract__r.Id&amp;&quot;&amp;00N7Z000006mYKJ=&quot;&amp;TEXT(DAY(Actual_Service_Date__c))+ &quot;/&quot; +TEXT(MONTH(Actual_Service_Date__c))+ &quot;/&quot; +TEXT(YEAR(Actual_Service_Date__c)),IMAGE(&quot;/servlet/servlet.FileDownload?file=0157Z000000wmXD&quot;, &quot;Service&quot;)),&quot;&quot;))</formula>
    <label>_</label>
    <type>Text</type>
</CustomField>