objects/Visits__c/fields/Approved_Rejected__c.field-meta.xml
<CustomField>
    <fullName>Approved_Rejected__c</fullName>
    <inlineHelpText>Management to Approve. Projects or Service to Reject if required.</inlineHelpText>
    <label>Approved / Rejected</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
                <default>true</default>
                <label>Approved</label>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>