objects/Visits__c/fields/Approved_Rejected_Comments__c.field-meta.xml
<CustomField>
    <fullName>Approved_Rejected_Comments__c</fullName>
    <label>Approved / Rejected Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>