objects/Visits__c/fields/Associate_Sale__c.field-meta.xml
<CustomField>
    <fullName>Associate_Sale__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Associate Sale</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Visits (Associate Sale)</relationshipLabel>
    <relationshipName>Visits7</relationshipName>
    <type>Lookup</type>
</CustomField>