objects/Visits__c/fields/August__c.field-meta.xml
<CustomField>
    <fullName>August__c</fullName>
    <label>August</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>