objects/Visits__c/fields/Beta_R_Visit_PO__c.field-meta.xml
<CustomField>
    <fullName>Beta_R_Visit_PO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Beta Reactive Visit PO</description>
    <inlineHelpText>Beta Reactive Visit PO.
If mandatory, yet a P/O is not required, enter a dot (.).</inlineHelpText>
    <label>Beta R Visit PO</label>
    <referenceTo>PO__c</referenceTo>
    <relationshipLabel>Visits (Beta Visit PO)</relationshipLabel>
    <relationshipName>Visits1</relationshipName>
    <type>Lookup</type>
</CustomField>