objects/Visits__c/fields/Beta_S_Visit_PO__c.field-meta.xml
<CustomField>
    <fullName>Beta_S_Visit_PO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Beta Service Visit PO</description>
    <inlineHelpText>Beta Service Visit PO
If mandatory, yet a P/O is not required, enter a dot (.).</inlineHelpText>
    <label>Beta S Visit PO</label>
    <referenceTo>PO__c</referenceTo>
    <relationshipLabel>Visits (Beta Service Visit PO)</relationshipLabel>
    <relationshipName>Visits2</relationshipName>
    <type>Lookup</type>
</CustomField>