objects/Visits__c/fields/Beta_Service_Visit_PO__c.field-meta.xml
<CustomField>
    <fullName>Beta_Service_Visit_PO__c</fullName>
    <formula>Site_Contract__r.Beta_Site_Contract_Service_PO__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If mandatory, yet a P/O is not required, enter a dot (.).</inlineHelpText>
    <label>Beta Service Visit PO</label>
    <type>Text</type>
</CustomField>