objects/Visits__c/fields/Beta_Small_Works_PO__c.field-meta.xml
<CustomField>
    <fullName>Beta_Small_Works_PO__c</fullName>
    <description>Beta Small Works PO</description>
    <inlineHelpText>If mandatory, yet a P/O is not required, enter a dot (.).</inlineHelpText>
    <label>Beta Small Works PO</label>
    <length>100</length>
    <type>Text</type>
</CustomField>