objects/Visits__c/fields/Beta_Visit_PO__c.field-meta.xml
<CustomField>
    <fullName>Beta_Visit_PO__c</fullName>
    <inlineHelpText>This field is populated by the Service/Reactive or Small Works PO on the Site Contract. This field can be over-written if a PO number needs to be updated at the Visit stage.
If mandatory, yet a P/O is not required, enter a dot (.).</inlineHelpText>
    <label>Beta Visit PO</label>
    <length>50</length>
    <type>Text</type>
</CustomField>