objects/Visits__c/fields/Booked__c.field-meta.xml
<CustomField>
    <fullName>Booked__c</fullName>
    <formula>IF (  ISPICKVAL(Booked_with_Customers__c,&apos;Yes&apos;) , IMAGE(&quot;/servlet/servlet.FileDownload?file=0154E0000009XZJ&quot;,&quot;Tick&quot;),
IMAGE(&quot;/servlet/servlet.FileDownload?file=0154E0000009XZO&quot;,&quot;Cross&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booked</label>
    <type>Text</type>
</CustomField>