objects/Visits__c/fields/Booked_with_Customers__c.field-meta.xml
<CustomField>
    <fullName>Booked_with_Customers__c</fullName>
    <inlineHelpText>1. Yes first time, sends Booking confirmation email
2. Yes to any other, sends Rescheduling notification email
3. Yes again, sends Rescheduled confirmation email.</inlineHelpText>
    <label>Booked with Customer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Waiting P/O</fullName>
            </value>
            <value>
                <fullName>Waiting Permit</fullName>
            </value>
            <value>
                <fullName>Waiting Confirmation</fullName>
            </value>
            <value>
                <fullName>Booked Via Schedule</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>