objects/Visits__c/fields/Booking_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>Booking_Confirmation__c</fullName>
    <label>Booking Confirmation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>