objects/Visits__c/fields/Booking_Confirmation_Check__c.field-meta.xml
<CustomField>
    <fullName>Booking_Confirmation_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This check box Need to the Hentland Visit Booking Confirmation</description>
    <label>Booking Confirmation Check</label>
    <type>Checkbox</type>
</CustomField>