objects/Visits__c/fields/Booking_Notes__c.field-meta.xml
<CustomField>
    <fullName>Booking_Notes__c</fullName>
    <inlineHelpText>Additional notes taken whilst booking the customer.</inlineHelpText>
    <label>Notes/additional work</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>