objects/Visits__c/fields/C_S_Extras1__c.field-meta.xml
<CustomField>
    <fullName>C_S_Extras1__c</fullName>
    <label>C S Extras1</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>