objects/Visits__c/fields/C_S_Extras2__c.field-meta.xml
<CustomField>
    <fullName>C_S_Extras2__c</fullName>
    <label>C S Extras2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>