objects/Visits__c/fields/C_S_Extras3__c.field-meta.xml
<CustomField>
    <fullName>C_S_Extras3__c</fullName>
    <label>C S Extras3</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>