objects/Visits__c/fields/CA_40_GP_Cost_Allowance__c.field-meta.xml
<CustomField>
    <fullName>CA_40_GP_Cost_Allowance__c</fullName>
    <label>CA 40% GP Cost Allowance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>