objects/Visits__c/fields/CA_40_TotalPrice__c.field-meta.xml
<CustomField>
    <fullName>CA_40_TotalPrice__c</fullName>
    <label>CA 40% TotalPrice</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>