objects/Visits__c/fields/CA_50_GP_Cost_Allowance__c.field-meta.xml
<CustomField>
    <fullName>CA_50_GP_Cost_Allowance__c</fullName>
    <label>CA 50% GP Cost Allowance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>