objects/Visits__c/fields/CA_50_TotalPrice__c.field-meta.xml
<CustomField>
    <fullName>CA_50_TotalPrice__c</fullName>
    <label>CA 50% TotalPrice</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>