objects/Visits__c/fields/Call_Out_Types__c.field-meta.xml
<CustomField>
    <fullName>Call_Out_Types__c</fullName>
    <label>Call Out Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Call Out</fullName>
            </value>
            <value>
                <fullName>Revisit</fullName>
            </value>
            <value>
                <fullName>Install</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Small Works</fullName>
            </value>
            <value>
                <fullName>Projects</fullName>
            </value>
            <value>
                <fullName>Revisit - P&amp;L Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>