objects/Visits__c/fields/Callout_Comments__c.field-meta.xml
<CustomField>
    <fullName>Callout_Comments__c</fullName>
    <inlineHelpText>Visit/Job description</inlineHelpText>
    <label>Visit Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>