objects/Visits__c/fields/Cancelled__c.field-meta.xml
<CustomField>
    <fullName>Cancelled__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If this visit is cancelled, it is removed from views and will have the technician removed.</inlineHelpText>
    <label>Cancelled</label>
    <type>Checkbox</type>
</CustomField>