objects/Visits__c/fields/Communication__c.field-meta.xml
<CustomField>
    <fullName>Communication__c</fullName>
    <label>Communication</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>