objects/Visits__c/fields/Contact_2__c.field-meta.xml
<CustomField>
    <fullName>Contact_2__c</fullName>
    <inlineHelpText>This field is populated from the Site Contract or can be populated on the Visit</inlineHelpText>
    <label>Contact</label>
    <length>100</length>
    <type>Text</type>
</CustomField>