objects/Visits__c/fields/Correct_Technician_Report__c.field-meta.xml
<CustomField>
    <fullName>Correct_Technician_Report__c</fullName>
    <label>Correct Technician Report</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>