objects/Visits__c/fields/Cost_Margin_Calculator_Created__c.field-meta.xml
<CustomField>
    <fullName>Cost_Margin_Calculator_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cost &amp; Margin Calculator Created?</label>
    <type>Checkbox</type>
</CustomField>