objects/Visits__c/fields/Created_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_Time__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Created Date/Time</label>
    <type>DateTime</type>
</CustomField>