objects/Visits__c/fields/CS_Adjusted_Invoice_Amount__c.field-meta.xml
<CustomField>
    <fullName>CS_Adjusted_Invoice_Amount__c</fullName>
    <label>CS Adjusted Invoice Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>