objects/Visits__c/fields/CS_Estimated_GP__c.field-meta.xml
<CustomField>
    <fullName>CS_Estimated_GP__c</fullName>
    <label>CS Estimated GP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>