objects/Visits__c/fields/CS_InvoiceAmount__c.field-meta.xml
<CustomField>
    <fullName>CS_InvoiceAmount__c</fullName>
    <label>CS InvoiceAmount</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>