objects/Visits__c/fields/CS_InvoiceReceived__c.field-meta.xml
<CustomField>
    <fullName>CS_InvoiceReceived__c</fullName>
    <label>CS InvoiceReceived</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>