objects/Visits__c/fields/CS_WIP__c.field-meta.xml
<CustomField>
    <fullName>CS_WIP__c</fullName>
    <label>CS WIP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>