objects/Visits__c/fields/CSTotal2__c.field-meta.xml
<CustomField>
    <fullName>CSTotal2__c</fullName>
    <label>CSTotal2</label>
    <length>30</length>
    <type>Text</type>
</CustomField>