objects/Visits__c/fields/CSTotalAccommodation__c.field-meta.xml
<CustomField>
    <fullName>CSTotalAccommodation__c</fullName>
    <label>CSTotalAccommodation</label>
    <length>30</length>
    <type>Text</type>
</CustomField>