objects/Visits__c/fields/CSTotalCarriage__c.field-meta.xml
<CustomField>
    <fullName>CSTotalCarriage__c</fullName>
    <label>CSTotalCarriage</label>
    <length>30</length>
    <type>Text</type>
</CustomField>