objects/Visits__c/fields/CSTotalDirectLabourCost__c.field-meta.xml
<CustomField>
    <fullName>CSTotalDirectLabourCost__c</fullName>
    <label>CSTotalDirectLabourCost</label>
    <length>30</length>
    <type>Text</type>
</CustomField>