objects/Visits__c/fields/CSTotalExpenses__c.field-meta.xml
<CustomField>
    <fullName>CSTotalExpenses__c</fullName>
    <label>CSTotalExpenses</label>
    <type>TextArea</type>
</CustomField>