objects/Visits__c/fields/CSTotalHire__c.field-meta.xml
<CustomField>
    <fullName>CSTotalHire__c</fullName>
    <label>CSTotalHire</label>
    <length>30</length>
    <type>Text</type>
</CustomField>