objects/Visits__c/fields/CSTotalLabour__c.field-meta.xml
<CustomField>
    <fullName>CSTotalLabour__c</fullName>
    <label>CSTotalLabour</label>
    <length>30</length>
    <type>Text</type>
</CustomField>