objects/Visits__c/fields/CSTotalMaterials__c.field-meta.xml
<CustomField>
    <fullName>CSTotalMaterials__c</fullName>
    <label>CSTotalMaterials</label>
    <length>30</length>
    <type>Text</type>
</CustomField>