objects/Visits__c/fields/CSTotalOfTot__c.field-meta.xml
<CustomField>
    <fullName>CSTotalOfTot__c</fullName>
    <label>CSTotalOfTot</label>
    <length>30</length>
    <type>Text</type>
</CustomField>