objects/Visits__c/fields/CTAccommodation__c.field-meta.xml
<CustomField>
    <fullName>CTAccommodation__c</fullName>
    <label>CTAccommodation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>