objects/Visits__c/fields/CTCarriage__c.field-meta.xml
<CustomField>
    <fullName>CTCarriage__c</fullName>
    <label>CTCarriage</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>