objects/Visits__c/fields/CTDate__c.field-meta.xml
<CustomField>
    <fullName>CTDate__c</fullName>
    <label>CTDate</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>