objects/Visits__c/fields/CTDateSignedOff__c.field-meta.xml
<CustomField>
    <fullName>CTDateSignedOff__c</fullName>
    <label>CTDateSignedOff</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>