objects/Visits__c/fields/CTDirectLabourCost__c.field-meta.xml
<CustomField>
    <fullName>CTDirectLabourCost__c</fullName>
    <label>CTDirectLabourCost</label>
    <type>TextArea</type>
</CustomField>