objects/Visits__c/fields/CTExpenses__c.field-meta.xml
<CustomField>
    <fullName>CTExpenses__c</fullName>
    <label>CTExpenses</label>
    <type>TextArea</type>
</CustomField>