objects/Visits__c/fields/CTHire__c.field-meta.xml
<CustomField>
    <fullName>CTHire__c</fullName>
    <label>CTHire</label>
    <type>TextArea</type>
</CustomField>