objects/Visits__c/fields/CTInvoiceNoDate__c.field-meta.xml
<CustomField>
    <fullName>CTInvoiceNoDate__c</fullName>
    <label>CTInvoiceNoDate</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>