objects/Visits__c/fields/CTLabour__c.field-meta.xml
<CustomField>
    <fullName>CTLabour__c</fullName>
    <label>CTLabour</label>
    <length>30</length>
    <type>Text</type>
</CustomField>