objects/Visits__c/fields/CTMaterials__c.field-meta.xml
<CustomField>
    <fullName>CTMaterials__c</fullName>
    <label>CTMaterials</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>